<resources>
    <string name="alpha_create_wallet">Write these words down and keep them safe. Do not lose these words or forget your passphrase.</string>
    <string name="alpha_create_confirm_backup">I\'ve written down my words</string>
    <string name="creating_wallet">Creating wallet. Please wait…</string>
    <string name="restoring_wallet">Restoring wallet. Please wait…</string>
    <string name="decrypting_bip38">Decrypting BIP38 password. Please wait…</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Support</string>
    <string name="action_sweep">Sweep private key</string>
    <string name="action_bip47">PayNyms</string>
    <string name="action_unarchive">Activate all archived payment codes</string>
    <string name="action_sync_all">Sync all payment codes</string>
    <string name="action_whirlpool">Whirlpool</string>
    <string name="about_us">About Samourai Wallet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="options_cat_prefs">Block explorer</string>
    <string name="options_cat_stealth">Stealth</string>
    <string name="options_cat_remote">Remote</string>
    <string name="options_cat_wallet">Wallet</string>
    <string name="options_cat_networking">Networking</string>
    <string name="options_cat_other">About</string>
    <string name="options_mnemonic">Show mnemonic</string>
    <string name="options_mnemonic2">Show 12-word seed for this wallet.</string>
    <string name="options_xpub">Show BIP44 XPUB</string>
    <string name="options_xpub2">Show extended public key for BIP44 account.</string>
    <string name="options_xpub49">Show Segwit YPUB</string>
    <string name="options_xpub49_2">Show extended public key for BIP49 Segwit account (P2SH-wrapped).</string>
    <string name="options_xpub84">Show Segwit ZPUB</string>
    <string name="options_xpub84_2">Show extended public key for BIP84 Segwit account (Bech32).</string>
    <string name="options_xpub84_premix">Show Whirlpool pre-mix ZPUB</string>
    <string name="options_xpub84_premix2">Show extended public key for BIP84 Segwit account (Bech32) Whirlpool pre-mix.</string>
    <string name="options_xpub84_postmix">Show Whirlpool post-mix ZPUB</string>
    <string name="options_xpub84_postmix2">Show extended public key for BIP84 Segwit account (Bech32) Whirlpool post-mix.</string>
    <string name="options_xpub44_postmix">Show Whirlpool post-mix change XPUB</string>
    <string name="options_xpub44_postmix2">Show extended public key for BIP44 Whirlpool post-mix change account.</string>
    <string name="options_xpub49_postmix">Show Whirlpool post-mix change YPUB</string>
    <string name="options_xpub49_postmix2">Show extended public key for BIP49 Segwit account (P2SH-wrapped) Whirlpool post-mix change account.</string>
    <string name="options_xpub84_badbank">Show Whirlpool bad bank ZPUB</string>
    <string name="options_xpub84_badbank2">Show extended public key for BIP84 Segwit account (Bech32) Whirlpool bad bank.</string>
    <string name="options_xpub84_swapsmain">Show Swaps main account ZPUB</string>
    <string name="options_xpub84_swapsmain2">Show extended public key for BIP84 Segwit account (Bech32) XMR-BTC Swaps main account.</string>
    <string name="options_xpub84_swapsrefund">Show Swaps refund account ZPUB</string>
    <string name="options_xpub84_swapsrefund2">Show extended public key for BIP84 Segwit account (Bech32) XMR-BTC Swaps refund account.</string>
    <string name="options_xpub84_swapsasbmain">Show Swaps ASB main account ZPUB</string>
    <string name="options_xpub84_swapsasbmain2">Show extended public key for BIP84 Segwit account (Bech32) XMR-BTC Swaps ASB main account.</string>
    <string name="options_wipe">Secure erase wallet</string>
    <string name="options_wipe2">Securely erase this wallet from the device.</string>
    <string name="options_stealth_display">Stealth launcher</string>
    <string name="options_stealth_display2">Remove Samourai from the launcher and home screen. You must dial **YOUR_PIN_CODE# from the phone dialer to launch Samourai.</string>
    <string name="options_remote_commands">Enable remote commands</string>
    <string name="options_remote_commands2">Allow remote commands via SMS.</string>
    <string name="options_blockexplorer">Block explorer</string>
    <string name="options_blockexplorer2">The block explorer used to view transaction details.</string>
    <string name="options_sim_switch">SIM switch defense</string>
    <string name="options_sim_switch2">Send SMS to a trusted mobile number when the SIM card is changed.</string>
    <string name="options_use_telno">Use trusted mobile number for remote</string>
    <string name="options_use_telno2">Only allow remote commands sent from your trusted mobile phone number.</string>
    <string name="options_alert_telno">Trusted number</string>
    <string name="options_alert_telno2">A trusted mobile number that you can restrict remote access to (use int\'l format without spaces ex.: +447385555555).</string>
    <string name="options_export">Export wallet backup</string>
    <string name="options_change_pin">Change PIN</string>
    <string name="options_change_pin2">Define a new PIN code; used to unlock your wallet.</string>
    <string name="options_remote_pin">Stealth launch and remote PIN</string>
    <string name="options_remote_pin2">Define alternative PIN for stealth launch and remote functions.</string>
    <string name="options_autosave_backup">Autosave backup to device storage</string>
    <string name="options_autosave_backup2">Periodically save passphrase encrypted backup to device storage.</string>
    <string name="options_version">Version</string>
    <string name="options_txs">Transactions</string>
    <string name="options_boltzmann">STONEWALL spend</string>
    <string name="options_boltzmann_2">Spends will use STONEWALL algorithm for increased obfuscation.</string>
    <string name="options_utxo">Show unspent outputs</string>
    <string name="options_rbf0">Spend using RBF</string>
    <string name="options_rbf0_2">Spends will use replace-by-fee to enable fee bumping.</string>
    <string name="options_troubleshoot">Troubleshoot</string>
    <string name="options_passphrase_test">Passphrase/backup test</string>
    <string name="options_passphrase_test2">Verify wallet access and backup support.</string>
    <string name="options_send_backup_to_support">Send backup to tech support</string>
    <string name="options_send_backup_to_support2">Send wallet backup to tech support. Does not contain private key info.</string>
    <string name="options_fee_provider">Fee Estimation Source</string>
    <string name="options_fee_provider2">Select your preferred transaction fee estimation provider.</string>
    <string name="broadcast_transactions">Broadcast transaction</string>
    <string name="sign_transactions">Sign transaction</string>
    <string name="options_broadcast_on2">Uncheck (broadcasting OFF) to copy raw signed transaction to the clipboard.</string>
    <string name="options_strictoutputs">Strict mode</string>
    <string name="options_strictoutputs2">Strict control of transaction outputs and address reuse.</string>
    <string name="options_segwit">Receive to segwit addresses</string>
    <string name="options_segwit_2">Generate segwit addresses for incoming transactions.</string>
    <string name="options_broadcast_hex">Broadcast transaction hex</string>
    <string name="options_broadcast_hex2">Broadcast any signed transaction supplied in hex format</string>
    <string name="options_sign_PSBT">Sign a partially signed bitcoin transaction (PSBT) ready for broadcasting</string>
    <string name="options_like_typed_change">Receive change to like-typed outputs</string>
    <string name="options_like_typed_change2">Receive change to same type of address as spend output. Turn OFF to receive only to segwit change addresses.</string>
    <string name="options_haptic">Haptic PIN entry</string>
    <string name="options_haptic_2">Vibrate each digit on PIN code entry.</string>
    <string name="options_prune">Prune backup</string>
    <string name="options_prune2">Prune wallet payload and backup files.</string>
    <string name="options_address_calc">Address calculator</string>
    <string name="options_address_calc2">Calculate addresses derived from your wallet seed.</string>
    <string name="options_paynym_calc">PayNym calculator</string>
    <string name="options_paynym_calc2">Calculate addresses shared with other PayNyms.</string>
    <string name="options_indexes">Wallet indexes</string>
    <string name="options_indexes2">Current index values for this wallet.</string>
    <string name="options_whirlpool_state">Whirlpool info</string>
    <string name="options_whirlpool_state2">Show technical mixing data.</string>
    <string name="options_whirlpool_gui">Pair to Whirlpool GUI</string>
    <string name="options_whirlpool_gui2">Pair to Whirlpool GUI for continuous mixing.</string>
    <string name="options_swaps_gui">Pair to Swaps GUI</string>
    <string name="options_swaps_gui2">Pair to Swaps GUI for P2P trading.</string>
    <string name="options_postmix">Spend from post-mix Whirlpool</string>
    <string name="options_ricochet_sync">Sync Ricochet</string>
    <string name="options_ricochet_sync2">Synchronize Ricochet index.</string>
    <string name="prompt_send_backup_to_support">Send wallet backup to tech support? Does not include any private key, seed, or passphrase info.</string>
    <string name="timeline_today">Today</string>
    <string name="timeline_older">Older</string>
    <string name="tx_sent">Transaction sent</string>
    <string name="tx_failed">Error sending transaction</string>
    <string name="you_received">Received</string>
    <string name="you_sent">Sent</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="cannot_select_utxo">Cannot select unspent outputs</string>
    <string name="error_bip126_output">Error determining output address</string>
    <string name="error_change_output">Error determining change address</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="send_payment_code">Send payment code</string>
    <string name="ask_you_sure_exit">Are you sure you want to exit Samourai?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restore_wallet_from_backup">Restore wallet from backup</string>
    <string name="action_ricochet">Replay Ricochet</string>
    <string name="action_empty_ricochet">Empty Ricochet queue</string>
    <string name="options_sign">Sign message</string>
    <string name="options_fees">Show current miners\' fees</string>
    <string name="options_batch">Batch spend</string>
    <string name="set_pin_code">Set Pin code</string>
    <string name="restore">RESTORE</string>
    <string name="ricochet_hops_msg">Additional hops between your wallet and the final destination for increased fungibility</string>
    <string name="joinbot_msg">Amount will be sent as a coinjoin output</string>
    <string name="joinbot_spend_limit">Max spend amount: 1.25 BTC</string>
    <string name="wallet_locked">Wallet Locked</string>
    <string name="note_privacy_addons_are_not_available_for_selected_utxo_s">NOTE: Privacy addons are not available for selected utxo\'s</string>
    <string name="privacy_addons">Privacy Addons</string>
    <string name="joinbot">Joinbot</string>
    <string name="ricochet_">Ricochet</string>
    <string name="staggered_delivery">Staggered delivery</string>
    <string name="for_extra_privacy_message">For extra privacy and analysis resistance, each hop will appear in mempool 1 block apart.  Designed to be slow. Do not enable for urgent sends.</string>
    <string name="options_import_batch_input_hint">Batch spend in json format...</string>
</resources>