<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/primary_light"
            android:textColor="@color/primary_light"
            android:gravity="top|left"
            android:singleLine="false"
            android:lines="20"
            android:maxLines="20"
            android:hint="@string/options_import_batch_input_hint"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cancel"
            android:backgroundTint="@color/primary_dark"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ok"
            android:backgroundTint="@color/primary_dark"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
