<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addons_not_available_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="14dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:text="@string/note_privacy_addons_are_not_available_for_selected_utxo_s"
                android:textColor="#afd2d2d2"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/premium_addons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/privacy_addons"
                    android:textColor="@color/green_ui_2"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="44dp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/premium_addons_joinbot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <TextView
                        android:id="@+id/joinbot_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/joinbot"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.08"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/joinbot_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/joinbot_msg"
                        android:textColor="#afd2d2d2"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/joinbot_switch"
                        app:layout_constraintStart_toStartOf="@+id/joinbot_title"
                        app:layout_constraintTop_toBottomOf="@+id/joinbot_title" />

                    <TextView
                        android:id="@+id/joinbot_limit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/joinbot_spend_limit"
                        android:textColor="#6C6C6C"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/joinbot_switch"
                        app:layout_constraintStart_toStartOf="@+id/joinbot_title"
                        app:layout_constraintTop_toBottomOf="@+id/joinbot_desc" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/joinbot_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/joinbot_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/joinbot_limit" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/premium_addons_ricochet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/premium_addons_joinbot">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/ricochet_hops_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ricochet_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ricochet_desc" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/ricochet_staggered_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tx_staggered_delivery_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tx_staggered_delivery_desc" />

                    <TextView
                        android:id="@+id/ricochet_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/ricochet_"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.08"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/ricochet_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/ricochet_hops_msg"
                        android:textColor="#afd2d2d2"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/ricochet_hops_switch"
                        app:layout_constraintStart_toStartOf="@+id/ricochet_title"
                        app:layout_constraintTop_toBottomOf="@+id/ricochet_title" />

                    <TextView
                        android:id="@+id/tx_staggered_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/staggered_delivery"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/guideline18"
                        app:layout_constraintTop_toBottomOf="@+id/ricochet_desc" />

                    <TextView
                        android:id="@+id/tx_staggered_delivery_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/for_extra_privacy_message"
                        android:textColor="#afd2d2d2"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/ricochet_staggered_option"
                        app:layout_constraintStart_toStartOf="@+id/guideline18"
                        app:layout_constraintTop_toBottomOf="@+id/tx_staggered_delivery" />

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tx_staggered_delivery_desc" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/ricochet_staggered_option_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:constraint_referenced_ids="tx_staggered_delivery_desc,ricochet_staggered_option,tx_staggered_delivery" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.07" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/premium_addons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0"
                >

                <ImageButton
                    android:id="@+id/review_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_arrow_right"
                    android:background="@drawable/circle_background"
                    app:layout_constraintBottom_toTopOf="@+id/invisibleSpace"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    />

                <Space
                    android:id="@+id/invisibleSpace"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    android:visibility="invisible"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

